# antcolony

./: .gitattributes  .gitignore  .semgrepignore  CLAUDE.md  CONTRIBUTING-SPECIES.md  Cargo.toml  HANDOFF.md  README.md  rust-toolchain.toml  simulation.toml
.claude/: settings.local.json
.claude/worktrees/: candle-src
assets/config/: simulation.toml
assets/reward/: combat.toml  default.toml  terminal.toml
assets/species/: aphaenogaster_rudis.toml  brachyponera_chinensis.toml  camponotus_pennsylvanicus.toml  formica_fusca.toml  formica_rufa.toml  lasius_niger.toml  pogonomyrmex_occidentalis.toml  tapinoma_sessile.toml  temnothorax_curvinodis.toml  tetramorium_immigrans.toml
assets/sprite_prompts/: ENVIRONMENT_PROMPTS.md  PROMPTS.md
crates/antcolony-game/: Cargo.toml
crates/antcolony-game/src/: lib.rs  plugin.rs  resources.rs
crates/antcolony-net/: Cargo.toml
crates/antcolony-net/src/: hash.rs  lib.rs  protocol.rs  transport.rs
crates/antcolony-render/: Cargo.toml
crates/antcolony-render/src/: atlas.rs  editor.rs  encyclopedia.rs  inspector.rs  lib.rs  narrator.rs  picker.rs  player_input.rs  plugin.rs  pvp_client.rs  save_ui.rs  substrate.rs  timeline.rs  ui.rs
crates/antcolony-sim/: Cargo.toml
crates/antcolony-sim/examples/: colony_diag.rs  det_check.rs  matchup_bench.rs  smoke_10yr_ai.rs  species_bench.rs
crates/antcolony-sim/src/: ant.rs  clade.rs  colony.rs  config.rs  environment.rs  error.rs  hazards.rs  lib.rs  milestones.rs  module.rs  persist.rs  pheromone.rs  player.rs  simulation.rs  spatial.rs  species.rs  species_extended.rs  topology.rs  tube.rs  unlocks.rs  world.rs
crates/antcolony-sim/src/ai/: arbiter.rs  blackboard.rs  brain.rs  combat.rs  forager.rs  knowledge_source.rs  mod.rs  observation.rs  strategist.rs
crates/antcolony-sim/src/bench/: expected.rs  metrics.rs  mod.rs  report.rs  run.rs
crates/antcolony-sim/tests/: ai_vs_ai.rs  bench_determinism.rs  brain_actually_drives.rs  nest_arena.rs  phase1_plumbing.rs  phase_a_toml_compat.rs
crates/antcolony-trainer/: Cargo.toml
crates/antcolony-trainer/src/: backend.rs  env.rs  eval.rs  exploiter_league.rs  joint_ppo.rs  ladder_league.rs  league.rs  lib.rs  parallel_env.rs  phase3.rs  policy.rs  ppo.rs  reward.rs  self_play.rs  tournament.rs
crates/antcolony-trainer/src/hierarchical/: actor_critic.rs  ant.rs  commander.rs  mod.rs  obs_to_tensors.rs  sizing.rs  transformer.rs
crates/antcolony-trainer/tests/: hierarchical_sampling.rs  hierarchical_smoke.rs  joint_ppo_smoke.rs  league_agent.rs  league_manager.rs  self_play_rollout.rs
docs/: ai-architecture.md  ai-brain.md  ai-literature-review-2026-05.md  ai-tournament-results.md  ai-training-postmortem.md  audit-packet-gemini.md  bench-audit.md  biology-audit.md  biology-roadmap.md  biology.md  digging-design.md  methodology.md  multiplayer-architecture.md  phase-8-full-game-mode.md  phases-roadmap.md  ppo-r1-postmortem.md  ppo-r5-postmortem.md  pvp-mode-design.md
docs/biology/interspecific/: 01-competition-and-displacement.md  02-combat-mechanics.md  03-harvester-competition-cole-wiernasz.md  04-temnothorax-defense-dornhaus.md  05-raiding-usurpation-and-who-wins.md
docs/postmortems/: 2026-05-09-seasonal-transition-cliffs.md
docs/species/: aphaenogaster_rudis.md  brachyponera_chinensis.md  camponotus_pennsylvanicus.md  formica_fusca.md  formica_rufa.md  lasius_niger.md  pogonomyrmex_occidentalis.md  tapinoma_sessile.md  temnothorax_curvinodis.md  tetramorium_immigrans.md
docs/superpowers/plans/: 2026-05-09-phase1-sim-foundation.md  2026-05-12-proper-food-spawn-calibration.md  2026-05-18-ant-brain-phase1-sim-plumbing.md  2026-05-20-ant-brain-phase2a-policy-nets.md  2026-05-20-ant-brain-phase2b1-ppo-primitives.md  2026-05-29-ant-brain-phase2b2-joint-trainer.md  2026-05-29-ant-brain-phase3-single-gpu-training.md  2026-06-19-self-play-league-sp1.md  2026-06-20-pvp-tournament-yardstick.md  2026-06-20-self-play-league-sp2.md  2026-06-21-ladder-league.md  2026-06-22-arena-cross-species.md  2026-06-23-arena-nest-layer.md  2026-06-23-raid-seeking.md  2026-06-24-hac-cross-species.md
docs/superpowers/specs/: 2026-05-09-outreach-roadmap-design.md  2026-05-18-ant-brain-hierarchical-design.md  2026-06-19-self-play-league-sp1-design.md  2026-06-20-pvp-tournament-yardstick-design.md  2026-06-20-self-play-league-sp2-design.md  2026-06-21-ladder-league-design.md  2026-06-22-arena-cross-species-design.md  2026-06-22-arena-hazards-predators-design.md  2026-06-22-arena-map-terrain-design.md  2026-06-22-arena-n-colony-ffa-design.md  2026-06-22-arena-nest-layer-design.md
outreach/: README.md  dornhaus_charbonneau.md  warren_consolidated.md  wiernasz_cole.md
scripts/: Cargo.cnc-trainer.toml  Cargo.cnc.toml  adversarial_fsp.ps1  ai_training_run.ps1  archetype_dominance_check.ps1  backup_checkpoints.ps1  brood_retry.py  build_audit_packet.ps1  build_trainer_cnc.sh  build_trainer_cuda.bat  check_eviction_cnc.sh  check_phase1_smoke.ps1  cnc_provision.ps1  curated_2x_data.ps1  curated_bigger_model.ps1  curated_tournament.ps1  dagger_iteration.ps1  dagger_iteration_v2.ps1  dagger_iteration_v3.ps1  dagger_on_curated.ps1  derive_species_brains.py  dominance_big_arena.ps1  eval_aether_brains.ps1  eval_baseline_archetypes.sh  eval_ppo_r5.ps1  eval_ppo_r7.ps1  eval_status_cnc.sh  flux_gen.py  force_rebuild_phase3_cnc.sh  gate_check_sp1_cnc.sh  generate_archetype_variants.py  generate_blended_brains.py  generate_full_brain_pool.py  gpu_brain_pipeline.ps1  gpu_probe_cnc.sh  inspect_aether_brain.ps1  iterative_fsp.ps1  lasius_niger_sprites.py  launch_attempt3.ps1  launch_attempt4.ps1  (+55 more)
src/: main.rs
tests/: headless_sim.rs
