[workspace]
resolver = "2"
members = [
    "crates/antcolony-sim",
    "crates/antcolony-game",
    "crates/antcolony-render",
    "crates/antcolony-trainer",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
rand = "0.8"
rand_chacha = "0.3"
glam = { version = "0.29", features = ["serde"] }
rayon = "1.10"
toml = "0.8"
wide = "0.7"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "x11",
] }

antcolony-sim = { path = "crates/antcolony-sim" }
antcolony-game = { path = "crates/antcolony-game" }
antcolony-render = { path = "crates/antcolony-render" }
antcolony-trainer = { path = "crates/antcolony-trainer" }

# Candle stack — pure-Rust ML/RL framework. Pulled from local fork at
# J:\candle-src\ which has CUDA optimizations for the RTX 3070 Ti
# (compute_cap=86) already applied.
# Aether parity tracker: J:\aether\ANTCOLONY_FR.md — every Candle
# capability used here is tracked there as a feature Aether should
# eventually supply, so we can swap Candle out cleanly when Aether is
# ready.
candle-core = { path = "../candle-src/candle-core" }
candle-nn = { path = "../candle-src/candle-nn" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[package]
name = "antcolony"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
antcolony-sim.workspace = true
antcolony-game.workspace = true
antcolony-render.workspace = true
bevy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
