[package]
name = "antcolony-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
antcolony-sim.workspace = true
antcolony-game.workspace = true
antcolony-net.workspace = true
bevy.workspace = true
tracing.workspace = true
glam.workspace = true
anyhow.workspace = true
