[package]
name = "antcolony-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true
glam.workspace = true
rayon.workspace = true
toml.workspace = true
wide.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
