[package]
name = "antcolony-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true
glam.workspace = true
rayon.workspace = true
toml.workspace = true
wide.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

# Explicit bin target so the executable keeps its dashed name
# (`validate-species.exe`), instead of being derived as `validate_species`
# from the source file path.
[[bin]]
name = "validate-species"
path = "src/bin/validate_species.rs"
