[package]
name = "antcolony-trainer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
antcolony-sim.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[[bin]]
name = "ppo-train"
path = "src/bin/ppo_train.rs"
